2006-03-12  David Hampton  <hampton@employees.org>

	* src/engine/gnc-pricedb.[ch]:
	* src/engine/gw-engine-spec.scm: Andrew Sackville-West's changes
	to add the ability to lookup the latest price before a specific
	date.

	* src/register/register-gnome/gnucash-sheet.[ch]:
	* src/register/ledger-core/split-register.[ch]:
	* src/register/ledger-core/split-register-control.c:
	* src/gnome/gnc-split-reg.[ch]:
	* src/gnome/gnc-plugin-page-register.c:
	* src/engine/Transaction.h: Replace the changes in r13361 with a
	better method for determining when a change in the register needs
	to be reflected in the available user actions.  Now updates the
	Void and Unvoid actions which implements the enhancement request
	in 330763.

2006-03-11  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]: Finish
	removing the redundant list of valid strings maintained by the
	combocell and use the list in the item_edit widget.  Fixes the
	problem where account cell contents disappear when focusing in/out
	of an account cell.

	* src/gnome-utils/account-quickfill.c: Update the quickfill to
	watch for accounts being added/removed from the account
	tree. Fixes 152101 and 302682.

2006-03-11  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-search/dialog-search.c:
	  Make sure we translate the button label string.

	* src/business/business-reports/invoice.scm:
	  translate "Thank you.." string.

	* src/engine/Makefile.am:
	  fix the build-order (and install order) of the engine libs.

2006-03-11  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-model-account.c:
	* src/engine/Group.c: The account tree model event handler needs
	to be more robust in the case of multiple account sets existing at
	the same time. Pass the account group instead of the parent
	account so that its possible to determine which model a "top
	level" account belongs to.  Fixes 333866.
